--- a/index.html
+++ b/index.html
@@ -2,17 +2,42 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Gruppi di colleghi</title>
+  <title>Gruppi AI Hackathon</title>
   <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
       background: #f8f9fa;
-      margin: 20px;
+      margin: 0;
+      padding: 0;
     }
-    h1 {
-      color: #222;
+
+    /* HEADER */
+    header {
+      background-color: #002b5c;
+      color: white;
+      text-align: center;
+      padding: 20px 10px;
+      position: sticky;
+      top: 0;
+      z-index: 10;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     }
+
+    header img {
+      max-height: 60px;
+      margin-bottom: 10px;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 24px;
+    }
+
+    main {
+      padding: 20px;
+    }
+
     h2 {
       background-color: #007bff;
       color: white;
@@ -20,6 +45,7 @@
       border-radius: 6px;
       margin-top: 30px;
     }
+
     table {
       border-collapse: collapse;
       width: 100%;
@@ -27,14 +53,17 @@
       background: white;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
+
     th, td {
       border: 1px solid #ddd;
       padding: 8px;
       text-align: left;
     }
+
     th {
       background-color: #f1f1f1;
     }
+
     input[type="file"] {
       margin-bottom: 20px;
     }
@@ -42,11 +71,18 @@
 </head>
 <body>
 
-  <h1>Elenco Gruppi da Excel</h1>
-  <p>Carica il file Excel (.xlsx) con i 10 fogli, uno per ogni gruppo:</p>
-  <input type="file" id="fileInput" accept=".xlsx" />
+  <!-- HEADER -->
+  <header>
+    <img src="logo.png" alt="Logo" />
+    <h1>Elenco Gruppi da Excel</h1>
+  </header>
 
-  <div id="contenitore"></div>
+  <!-- CONTENUTO -->
+  <main>
+    <p>Carica il file Excel (.xlsx) con i 10 fogli, uno per ogni gruppo:</p>
+    <input type="file" id="fileInput" accept=".xlsx" />
+    <div id="contenitore"></div>
+  </main>
 
   <script>
     const input = document.getElementById('fileInput');
@@ -69,7 +105,7 @@
 
           if (json.length === 0) return; // foglio vuoto
 
-          // Titolo
+          // Titolo del gruppo
           const titolo = document.createElement('h2');
           titolo.textContent = `Gruppo ${index + 1}: ${sheetName}`;
           contenitore.appendChild(titolo);
