--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <!-- HEADER -->
   <header>
     <img src="logo.png" alt="Logo" />
-    <h1>Elenco Gruppi da Excel</h1>
+    <h1>Gruppi</h1>
   </header>
 
   <!-- CONTENUTO -->
