--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     /* HEADER */
     header {
-      background-color: #002b5c;
+      background-color: #FEFFFF;
       color: white;
       text-align: center;
       padding: 50px 20px;
@@ -25,8 +25,8 @@
     }
 
     header img {
-      max-height: 360px;
-      margin-bottom: 15px;
+      max-height: 720px;
+      margin-bottom: 30px;
     }
 
     header h1 {
@@ -74,7 +74,7 @@
   <!-- HEADER -->
   <header>
     <img src="logo2.png" alt="Logo" />
-    <h1>Gruppi</h1> 
+    <h1>Cerca quale è il tuo Gruppo di lavoro</h1> 
   </header>
 
   <!-- CONTENUTO -->
