--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       background-color: #FEFFFF;
       color: white;
       text-align: center;
-      padding: 20px 10px;
+      /* padding: 20px 10px; */
       position: sticky;
       top: 0;
       z-index: 10;
