--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
       background-color: #f1f1f1;
     }
 
+    #loading {
+      font-size: 18px;
+      color: #555;
+      margin-top: 20px;
+    }
+
+    #error {
+      color: red;
+      font-weight: bold;
+      margin-top: 20px;
+    }
+    
     input[type="file"] {
       margin-bottom: 20px;
     }
@@ -79,25 +91,27 @@
 
   <!-- CONTENUTO -->
   <main>
-    <p>Carica il file Excel (.xlsx) con i 10 fogli, uno per ogni gruppo:</p>
-    <input type="file" id="fileInput" accept=".xlsx" />
+    <div id="loading">Caricamento dati da “Gruppi vDraft.xlsx”...</div>
+    <div id="error"></div>
     <div id="contenitore"></div>
   </main>
 
   <script>
-    const input = document.getElementById('fileInput');
     const contenitore = document.getElementById('contenitore');
+    const loading = document.getElementById('loading');
+    const errorDiv = document.getElementById('error');
 
-    input.addEventListener('change', (event) => {
-      const file = event.target.files[0];
-      if (!file) return;
+    // Percorso statico del file Excel
+    const filePath = 'Gruppi vDraft.xlsx';
 
-      const reader = new FileReader();
-      reader.onload = (e) => {
-        const data = new Uint8Array(e.target.result);
+    fetch(filePath)
+      .then(response => {
+        if (!response.ok) throw new Error('Impossibile caricare il file Excel');
+        return response.arrayBuffer();
+      })
+      .then(data => {
         const workbook = XLSX.read(data, { type: 'array' });
-
-        contenitore.innerHTML = ""; // pulisce eventuali dati precedenti
+        loading.style.display = 'none'; // nasconde il messaggio di caricamento
 
         workbook.SheetNames.forEach((sheetName, index) => {
           const sheet = workbook.Sheets[sheetName];
@@ -107,7 +121,7 @@
 
           // Titolo del gruppo
           const titolo = document.createElement('h2');
-          titolo.textContent = `Gruppo: ${sheetName}`;
+          titolo.textContent = `Gruppo ${index + 1}: ${sheetName}`;
           contenitore.appendChild(titolo);
 
           // Crea tabella
@@ -135,13 +149,15 @@
             });
             tbody.appendChild(tr);
           });
+
           table.appendChild(tbody);
           contenitore.appendChild(table);
         });
-      };
-
-      reader.readAsArrayBuffer(file);
-    });
+      })
+      .catch(err => {
+        loading.style.display = 'none';
+        errorDiv.textContent = '❌ Errore: ' + err.message;
+      });
   </script>
 </body>
 </html>
