--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
           // Titolo del gruppo
           const titolo = document.createElement('h2');
-          titolo.textContent = `Gruppo ${index + 1}: ${sheetName}`;
+          titolo.textContent = `Gruppo: ${sheetName}`;
           contenitore.appendChild(titolo);
 
           // Crea tabella
