--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
   <!-- HEADER -->
   <header>
     <img src="logo2.png" alt="Logo" />
-    <h1>Cerca quale è il tuo Gruppo di lavoro</h1> 
+    <h1>Il tuo Gruppo di lavoro</h1> 
   </header>
 
   <!-- CONTENUTO -->
   <main>
-    <div id="loading">Caricamento dati da “Gruppi vDraft.xlsx”...</div>
+    <div id="loading">Caricamento dati...</div>
     <div id="error"></div>
     <div id="contenitore"></div>
   </main>
